...
        )

        SearchBox(
            placeholder = stringResource(R.string.user_search_field_help),
            onSearchSubmitted = onSearchSubmitted,
            onClearInput = onClearInput,
            testTag = "search_input"
        )

        // Fixed header showing results count
        if (userList.isNotEmpty() && totalCount > 0) {
            Box(
                modifier = Modifier
...
            errorMessage = errorMessage
        ) {
            UsersListView(
                modifier = Modifier
                    .padding(horizontal = Spacing.medium)
                    .fillMaxWidth()
                    .semantics { testTag = "user_list" },
                userList = userList,
                lastVisibleItemIndex = lastVisibleItemIndex,
                onItemClick = onItemClick,
                onListScrolledToEnd = onListScrolledToEnd
            )
        }
...
